# demo-proyecto

./: CMakeLists.txt  main.cpp  mapa.txt  mapa2.txt
assets/maps/: mapa1.tmx
clases/: Animator.cpp  Animator.h  Bala.cpp  Bala.h  Mapa.cpp  Mapa.h  MapaTMX.h  auto.cpp  auto.h
